# PyJanus

./: .gitignore  README.md  pyproject.toml
examples/: build-dict.ja  caesar.ja  linked-list.ja  sort-network.ja
jana_py/: __init__.py  ast.py  bennett.py  c_codegen.py  circuit.py  cli.py  encode.py  equiv.py  errors.py  format.py  inverse.py  invert.py  parser.py  parser_jana2014.py  parser_janus1982.py  parser_janus1982ext.py  parser_janus2026.py  pebble.py  preprocess.py  runtime.py  validate.py
tests/: test_bennett.py  test_char_array_support.py  test_circuit.py  test_debugger_cli.py  test_dict_program.py  test_equiv.py  test_inverse.py  test_m1.py  test_m2.py  test_m3.py  test_m4.py  test_pebble.py  test_preprocess_conditionals.py  test_preprocess_define.py  test_preprocess_escape.py  test_preprocess_include.py  test_preprocess_source_map.py  test_reversibility.py  test_struct_errors.py  test_struct_parse.py  test_struct_runtime.py  test_struct_show.py
tests/fixtures/: from_debug_simple.ja  iterate_debug_simple.ja  local_backward_simple.ja
